# test-middleware-linux

./: Build.md  Cargo.toml  Makefile.toml  README.md  upvpn.conf.toml  wixtoolset.msi
icareslink-cli/: Cargo.toml
icareslink-cli/src/: cli.rs
icareslink-cli/src/commands/: testing.rs
icareslink-config/: Cargo.toml  build.rs
icareslink-config/src/: lib.rs
icareslink-controller/: Cargo.toml  build.rs
icareslink-controller/proto/: icareslink-controller.proto
icareslink-controller/src/: auth.rs  lib.rs
icareslink-controller/src/conversions/: account.rs  mod.rs  notification.rs
icareslink-daemon/: Cargo.toml  upvpn.conf.toml
icareslink-daemon/src/: cleanup.rs  controller.rs  daemon.rs  lib.rs  logging.rs  main.rs  unique.rs
icareslink-packages/: Cargo.toml  Makefile.toml  cargo-config.toml  icareslink-oss-licenses-rust.html  icareslink-oss-licenses.html  tag.txt
icareslink-packages/linux/: icareslink.desktop
icareslink-packages/linux/debian/maintainer-scripts/: postrm  preinst  prerm
icareslink-packages/linux/unit-scripts/: icareslink-daemon.service
icareslink-types/: Cargo.toml
icareslink-types/src/: device.rs  lib.rs  notification.rs  upvpn_server.rs
