[workspace]
resolver = "2"
members = [
    "icareslink-packages",
    "icareslink-cli",
    "icareslink-controller",
    "icareslink-daemon",
    "icareslink-config",
    "icareslink-types",
]

[profile.release]
#opt-level = 'z'     # Optimize for size.
opt-level = 3
lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
