[package]
name = "icareslink-cli"
version = "0.1.0"
edition = "2021"
publish = false
# license = "GPL-3.0"
authors = ["iCARES Sdn Bhd"]
description = "Cli to manage Middleware session via icareslink daemon"
# homepage = "https://upvpn.app"
repository = "https://github.com/YiHeng2004/test-middleware"

[[bin]]
name = "icareslink"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.3", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
validator = { version = "0.16.0", features = ["derive"] }
icareslink-controller = {path = "../icareslink-controller"}
icareslink-types = {path = "../icareslink-types"}
thiserror = "1.0.40"
tonic = "0.9.2"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
indicatif = "0.17.3"
tokio-stream = { version = "0.1.12", features = ["sync"] }
console = "0.15.5"
