[package]
name = "icareslink-controller"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["iCARES Sdn Bhd"]
# homepage = "https://upvpn.app"
repository = "https://github.com/YiHeng2004/test-middleware"

[dependencies]
futures = "0.3.28"
hyper = "0.14.26"
parity-tokio-ipc = "0.9.0"
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.40"
tokio = "1.27.0"
tonic = "0.9.2"
tower = "0.4.13"
icareslink-config = { path = "../icareslink-config" }
icareslink-types = {path = "../icareslink-types"} # grpc types to icareslink-types conversions
chrono = { version = "0.4.24", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9.2"
